--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.seo.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.seo.json
@@ -89,6 +89,62 @@
           "searchable": true,
           "sortable": true
         }
+      },
+      "metaRobots": {
+        "edit": {
+          "label": "metaRobots",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "metaRobots",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "structuredData": {
+        "edit": {
+          "label": "structuredData",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "structuredData",
+          "searchable": false,
+          "sortable": false
+        }
+      },
+      "metaViewport": {
+        "edit": {
+          "label": "metaViewport",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "metaViewport",
+          "searchable": true,
+          "sortable": true
+        }
+      },
+      "canonicalURL": {
+        "edit": {
+          "label": "canonicalURL",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "canonicalURL",
+          "searchable": true,
+          "sortable": true
+        }
       }
     },
     "layouts": {
@@ -123,6 +179,28 @@
           {
             "name": "metaSocial",
             "size": 12
+          }
+        ],
+        [
+          {
+            "name": "metaRobots",
+            "size": 6
+          }
+        ],
+        [
+          {
+            "name": "structuredData",
+            "size": 12
+          }
+        ],
+        [
+          {
+            "name": "metaViewport",
+            "size": 6
+          },
+          {
+            "name": "canonicalURL",
+            "size": 6
           }
         ]
       ]
