feat(back): updates collections schema "name" field and adds singleItemRoute field (#1001)
Closes: #1001

--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.landing-page-content.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##shared.landing-page-content.json
@@ -61,23 +61,42 @@
           "searchable": false,
           "sortable": false
         }
+      },
+      "singleItemRoute": {
+        "edit": {
+          "label": "singleItemRoute",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "singleItemRoute",
+          "searchable": true,
+          "sortable": true
+        }
       }
     },
     "layouts": {
       "list": [
         "id",
         "title",
-        "hero"
+        "hero",
+        "singleItemRoute"
       ],
       "edit": [
         [
           {
             "name": "title",
-            "size": 6
+            "size": 4
+          },
+          {
+            "name": "singleItemRoute",
+            "size": 4
           },
           {
             "name": "hero",
-            "size": 6
+            "size": 4
           }
         ],
         [
