--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##classification.classification.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##classification.classification.json
@@ -69,7 +69,7 @@
           "placeholder": "",
           "visible": true,
           "editable": true,
-          "mainField": "skill"
+          "mainField": "name"
         },
         "list": {
           "label": "skills",
@@ -182,7 +182,6 @@
         ]
       ],
       "list": [
-        "id",
         "name",
         "slug",
         "skills"
