build(front): refactors video, position, and project fields (#1005)

--- a/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##position.position.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_content_types##api##position.position.json
@@ -264,6 +264,20 @@
           "sortable": false
         }
       },
+      "title": {
+        "edit": {
+          "label": "title",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "title",
+          "searchable": true,
+          "sortable": true
+        }
+      },
       "createdAt": {
         "edit": {
           "label": "createdAt",
@@ -336,6 +350,10 @@
           }
         ],
         [
+          {
+            "name": "title",
+            "size": 4
+          },
           {
             "name": "startDate",
             "size": 4
