--- a/front/package.json
+++ b/front/package.json
@@ -37,6 +37,7 @@
     "@sveltejs/kit": "^1.27.6",
     "autoprefixer": "^10.4.16",
     "html-minifier-terser": "^7.2.0",
+    "marked": "^10.0.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
