--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "@iconify-json/icon-park-outline": "^1.1.12",
     "@iconify-json/mdi": "^1.1.55",
     "@iconify-json/ph": "^1.1.6",
+    "@iconify-json/simple-icons": "^1.1.78",
     "@iconify-json/typcn": "^1.1.6",
     "@sentry/sveltekit": "^7.80.1",
     "@sveltejs/adapter-static": "^2.0.3",
