--- a/back/package.json
+++ b/back/package.json
@@ -9,19 +9,19 @@
   },
   "scripts": {
     "build": "strapi build",
+    "cs": "config-sync",
     "develop": "strapi develop",
     "postinstall": "patch-package",
     "start": "strapi start",
-    "cs": "config-sync",
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.14.0",
-    "@strapi/plugin-sentry": "4.14.0",
+    "@strapi/plugin-i18n": "4.14.6",
+    "@strapi/plugin-sentry": "4.14.6",
     "@strapi/plugin-seo": "^1.9.4",
-    "@strapi/plugin-users-permissions": "4.14.0",
-    "@strapi/provider-upload-aws-s3": "4.14.0",
-    "@strapi/strapi": "4.14.0",
+    "@strapi/plugin-users-permissions": "4.14.6",
+    "@strapi/provider-upload-aws-s3": "4.14.6",
+    "@strapi/strapi": "4.14.6",
     "pg": "^8.11.3",
     "strapi-plugin-config-sync": "^1.2.3"
   },
@@ -31,6 +31,11 @@
   "engines": {
     "node": ">=16.0.0 <=20.x.x",
     "npm": ">=6.0.0"
+  },
+  "overrides": {
+    "@strapi/plugin-upload": {
+      "sharp": ">=0.32.6"
+    }
   },
   "strapi": {}
 }
