--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -4,5 +4,6 @@
   "trailingComma": "es5",
   "semi": true,
   "singleQuote": true,
-  "plugins": ["prettier-plugin-svelte", "prettier-plugin-css-order"]
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-css-order"],
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
