--- a/front/jsconfig.json
+++ b/front/jsconfig.json
@@ -2,6 +2,15 @@
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
+    "allowJs": true,
+    "checkJs": false,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "moduleResolution": "bundler",
     "paths": {
       "@api": ["./src/lib/api"],
       "@components": ["./src/lib/components"],
