--- a/front/package.json
+++ b/front/package.json
@@ -2,9 +2,11 @@
   "name": "dgrebb.com",
   "version": "3.9.1",
   "private": true,
-  "type": "module",
   "scripts": {
-    "check": "svelte-check",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+    "prettier": "prettier",
+    "lint": "prettier --check . && eslint .",
     "dev.l": "vite --config vite.local.config.js dev",
     "dev.s": "vite --config vite.local.config.js dev",
     "dev.p": "vite --config vite.config.js dev",
@@ -13,17 +15,25 @@
     "build.s": "vite --config vite.config.js build",
     "build.p": "vite --config vite.config.js build",
     "build": "vite --config vite.config.js build",
-    "prettier": "prettier",
-    "lint": "prettier --plugin prettier-plugin-svelte . --check",
-    "fix": "prettier --plugin prettier-plugin-svelte . --write",
     "preview": "vite --config vite.config.js preview",
     "preview.local": "vite --config vite.local.config.js preview",
-    "postinstall": "patch-package",
     "postbuild.l": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -t --attribution=false --domain https://local.dgrebb.com",
     "postbuild.s": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -t --attribution=false --domain https://stg.dgrebb.com",
-    "postbuild": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -t --attribution=false --domain https://www.dgrebb.com"
+    "postbuild": "npx svelte-sitemap -i '404.html' -i '/404/index.html' -i 'shingle.html' -i '/shingle/index.html' -i '/posts/category/index.html' -t --attribution=false --domain https://www.dgrebb.com",
+    "test": "npm run test:integration && npm run test:unit",
+    "format": "prettier --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
+    "@playwright/test": "^1.28.1",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "typescript": "^5.0.0",
+    "vitest": "^0.32.2",
     "@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.6.0",
     "@iconify-json/entypo-social": "^1.1.5",
     "@iconify-json/gg": "^1.1.6",
@@ -54,5 +64,6 @@
     "svelte-sitemap": "^2.6.0",
     "unplugin-icons": "^0.17.4",
     "vite": "^4.5.0"
-  }
+  },
+  "type": "module"
 }
