chore(back): updates required content fields

--- a/back/config/sync/core-store.plugin_content_manager_configuration_components##artifacts.images.json
+++ b/back/config/sync/core-store.plugin_content_manager_configuration_components##artifacts.images.json
@@ -47,13 +47,28 @@
           "searchable": true,
           "sortable": true
         }
+      },
+      "details": {
+        "edit": {
+          "label": "details",
+          "description": "",
+          "placeholder": "",
+          "visible": true,
+          "editable": true
+        },
+        "list": {
+          "label": "details",
+          "searchable": false,
+          "sortable": false
+        }
       }
     },
     "layouts": {
       "list": [
         "id",
         "images",
-        "title"
+        "title",
+        "details"
       ],
       "edit": [
         [
@@ -64,6 +79,12 @@
           {
             "name": "images",
             "size": 6
+          }
+        ],
+        [
+          {
+            "name": "details",
+            "size": 12
           }
         ]
       ]
