--- a/_utils/_cliff/config.toml
+++ b/_utils/_cliff/config.toml
@@ -72,7 +72,7 @@ commit_parsers = [
 # protect breaking changes from being skipped due to matching a skipping commit_parser
 protect_breaking_commits = false
 # filter out the commits that are not matched by commit parsers
-filter_commits = false
+filter_commits = true
 # glob pattern for matching git tags
 tag_pattern = "[0-9]*"
 # regex for skipping tags
