--- a/front/package.json
+++ b/front/package.json
@@ -27,26 +27,24 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-svelte": "^2.30.0",
-    "typescript": "^5.0.0",
-    "vitest": "^0.32.2",
     "@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.6.0",
-    "@iconify-json/entypo-social": "^1.1.5",
-    "@iconify-json/gg": "^1.1.6",
-    "@iconify-json/icomoon-free": "^1.1.5",
-    "@iconify-json/icon-park-outline": "^1.1.12",
-    "@iconify-json/mdi": "^1.1.55",
-    "@iconify-json/ph": "^1.1.6",
-    "@iconify-json/simple-icons": "^1.1.78",
-    "@iconify-json/typcn": "^1.1.6",
-    "@sentry/sveltekit": "^7.80.1",
+    "@iconify-json/entypo-social": "^1.1.6",
+    "@iconify-json/gg": "^1.1.7",
+    "@iconify-json/icomoon-free": "^1.1.6",
+    "@iconify-json/icon-park-outline": "^1.1.13",
+    "@iconify-json/mdi": "^1.1.56",
+    "@iconify-json/ph": "^1.1.7",
+    "@iconify-json/simple-icons": "^1.1.80",
+    "@iconify-json/typcn": "^1.1.7",
+    "@playwright/test": "^1.40.0",
+    "@sentry/sveltekit": "^7.82.0",
+    "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.27.6",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "html-minifier-terser": "^7.2.0",
     "marked": "^10.0.0",
     "patch-package": "^8.0.0",
@@ -55,15 +53,17 @@
     "postcss-nesting": "^12.0.1",
     "prettier": "^3.1.0",
     "prettier-plugin-css-order": "^2.0.1",
-    "prettier-plugin-svelte": "^3.1.0",
+    "prettier-plugin-svelte": "^3.1.2",
     "slugger": "^1.0.1",
-    "svelte": "^4.2.5",
-    "svelte-check": "^3.6.0",
-    "svelte-highlight": "^7.4.1",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.2",
+    "svelte-highlight": "^7.4.2",
     "svelte-meta-tags": "^3.1.0",
     "svelte-sitemap": "^2.6.0",
+    "typescript": "^5.3.2",
     "unplugin-icons": "^0.17.4",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6"
   },
   "type": "module"
 }
